# musicplayer

gstreamermm-1.0.10/: PKGBUILD
src/: Bar.cpp  Bar.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: CMakeLists.txt  Observable.cpp  Observable.h
src/gui/: Bar.cpp  Bar.h  CMakeLists.txt  LibraryView.cpp  LibraryView.h  MainWindow.cpp  MainWindow.h  PlayerView.cpp  PlayerView.h  SongItem.cpp  SongItem.h
src/player/: CMakeLists.txt  PlayerController.cpp  PlayerController.h  PlayerModel.cpp  PlayerModel.h
src/player/playercommand/: CMakeLists.txt  PlayerCommand.h  PlayerCommandNext.cpp  PlayerCommandNext.h  PlayerCommandPlay.cpp  PlayerCommandPlay.h  PlayerCommandPrevious.cpp  PlayerCommandPrevious.h  PlayerCommandStop.cpp  PlayerCommandStop.h
